--- a/RasberryPi/FlaskWebServer/templates/index.html
+++ b/RasberryPi/FlaskWebServer/templates/index.html
@@ -1,5 +1,13 @@
-<html>	
-<body>
-<h1>Hello from inside Pi!</h1>
+<html>
+<title> Rasberry Pi</title>
+
+<head>
+<link rel="stylesheet" href="/static/style.css" />
+</head>
+
+
+<body> 
+<h1> Hello world! </h1>
 </body>
+
 </html>
